<resources>
    <string name="app_name">GeoLock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="add">Add</string>
    <string name="near">Near</string>
    <string name="spot_image">Spot Image Alt description</string>
    <string name="spot_loked_title">Message locked!</string>
    <string name="take_image_buttom_text">Take Image</string>
    <string name="image_preview_content_description">Displays a preview of the taken image</string>
    <string name="message_hint_text">Message</string>
    <string name="range_slider_text">Visibility Range (km)</string>
    <string name="date_label_text">Expiration Date</string>
    <string name="add_spot_button_text">Add Spot</string>
</resources>