<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ch.usi.geolocker.fragments.AddFragment">

    <LinearLayout
        android:id="@+id/add_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/imageSelectButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/take_image_buttom_text"
            app:iconGravity="textStart"
            app:icon="@drawable/camera"
            app:iconPadding="8dp"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon" />

        <ImageView
            android:id="@+id/imageViewPreview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:src="@drawable/image_placeholder"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image_preview_content_description" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/message_hint_text"
            app:expandedHintEnabled="false"
            app:placeholderText="Your message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/messageTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/rangeSliderLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/range_slider_text" />

        <com.google.android.material.slider.Slider
            android:id="@+id/rangeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="5.0"
            android:stepSize="0.25"
            android:value="2.5" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/date_label_text"
            app:placeholderText="DD/MM/YYYY"
            android:focusable="false"
            app:expandedHintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submitSpotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_spot_button_text" />
    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicatorAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorSize="150dp"
        app:trackThickness="5dp"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_gravity="center" />
</FrameLayout>